# jaximus

./: .gitignore  CLAUDE.md  README.md  eval.py  functional_transformer.ipynb  functional_transformer.py  generate.py  model_configs.py  muon.py  muon_2.py  optimizer.py  parallel.py  parallel_debug.py  profile_train.py  pyproject.toml  scheduler.py  test_muon.py  test_muon_2.py  tpu_setup.sh  train.py  utils.py
configs/: gpt2.py
data/: array_records.py  dummy.py  grain_transforms.py  hf.py
ds/: hf.py
experiments/canon/: config.py  config_debug.py  model.py  optimizer.py
experiments/engram/: config.py  config_debug.py  model.py  optimizer.py
experiments/engram_lite/: config.py  config_debug.py  model.py  optimizer.py
experiments/nanochat/: config.py  config_debug.py  model.py  optimizer.py
experiments/value_embeddings/: config.py  config_debug.py  model.py  optimizer.py
exps/: gemma2.py  gpt.py  gpt2.py  llama.py  mini_llama.py  nanochat100_base.py  nanochat100_canon.py  nanochat100_canon_debug.py  nanochat100_debug.py  parallel_debug.py  qwen3.py
modelling/: model.py
modelling/layers/: attention.py  core.py  init.py  mlp.py  norm.py  position.py
modelling/models/: gemma2.py  gpt.py  llama.py  llama_3.py  qwen3.py
notebooks/: download.ipynb  grain_bug.ipynb  grain_hf_source.ipynb  hf_ds.ipynb  process_data.ipynb  qwen-moe.ipynb
scripts/: hf_to_array_records.py  parquet_to_array_records.py  proc_fineweb_10b.sh  proc_fineweb_10b_parquet.sh
utils/: common.py  configs.py  getters.py  metric_logger.py  parallel.py
(+2 files in other folders)
