[project]
name = "jaximus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "array-record>=0.7.2",
    "chz>=0.3.0",
    "datasets>=4.0.0",
    "flax>=0.11.0",
    "grain>=0.2.11",
    "ipykernel>=6.30.1",
    "jax",
    "jax>=0.7.0 ; platform_system == 'Darwin'",
    "jax[cuda12]>=0.7.0 ; (platform_machine == 'aarch64' and platform_system == 'Linux') or (platform_machine == 'x86_64' and platform_system == 'Linux')",
    "numpy>=2.3.2",
    "optax>=0.2.5",
    "orbax-checkpoint>=0.11.21",
    "tensorflow>=2.20.0",
    "transformers>=4.55.0",
    "wandb>=0.21.1",
    "xprof>=2.20.6",
]
